--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,25 @@
         android:theme="@style/Theme.CSSETicketingMobileApp"
         tools:targetApi="31">
         <activity
-            android:name=".ViolationReport"
+            android:name=".activities.ViolationForm"
             android:exported="false" />
         <activity
-            android:name=".Violation"
+            android:name=".activities.MyAccount"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".activities.Home"
             android:exported="false" />
         <activity
-            android:name=".HomeTicketInspector"
+            android:name=".activities.ViolationReport"
             android:exported="false" />
         <activity
-            android:name=".ScanQR"
+            android:name=".activities.Login"
+            android:exported="false" />
+        <activity
+            android:name=".activities.HomeTicketInspector"
+            android:exported="false" />
+        <activity
+            android:name=".activities.ScanQR"
             android:exported="false" />
         <activity
             android:name=".activities.Register"
