--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <!-- permissions to access the internet. -->
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/app_logo"
-        android:label="@string/app_name"
+        android:icon="@drawable/app_icon"
+        android:label="Final Git Ticketing App"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/Theme.CSSETicketingMobileApp"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.ChooseRole"
+            android:exported="false" />
+        <activity
+            android:name=".activities.RegisterTicketInspector"
+            android:exported="false" />
         <activity
             android:name=".activities.ViolationForm"
             android:exported="false" />
