--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/app_icon"
-        android:label="Final Git Ticketing App"
+        android:label="Ticketing"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/Theme.CSSETicketingMobileApp"
@@ -24,9 +24,6 @@
             android:exported="false" />
         <activity
             android:name=".activities.RegisterTicketInspector"
-            android:exported="false" />
-        <activity
-            android:name=".activities.ViolationForm"
             android:exported="false" />
         <activity
             android:name=".activities.MyAccount"
