--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -11,19 +11,19 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/app_icon"
-        android:label="Final Git Ticketing App"
+        android:label="Ticketing"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/Theme.CSSETicketingMobileApp"
         tools:targetApi="31">
         <activity
+            android:name=".activities.RegisterPassenger"
+            android:exported="false" />
+        <activity
             android:name=".activities.ChooseRole"
             android:exported="false" />
         <activity
             android:name=".activities.RegisterTicketInspector"
-            android:exported="false" />
-        <activity
-            android:name=".activities.ViolationForm"
             android:exported="false" />
         <activity
             android:name=".activities.MyAccount"
